2003-03-30  Borut Razem <borut.razem@siol.net>

	* support/Util/BuildCmd.c, support/Util/BuildCmd.h: rewrite buildCmdLine(),
	  changed type of list parameter to set
	* src/ds390/main.c: changed type of parameter asmOptions to set in _tininative_do_assemble()
	* src/port.h: changed type of do_assemble() parameter to set
	* src/SDCCmain.c: type of asmOptions changed to set, introduced setParseWithComma(),
	  sdcpp defined without path, removed variable VersionString, introduced set binPathSet,
	  definition of "cppoutfilename" macro with NULL value in preProcess()
	* src/SDCCglobl.h: included "SDCCset.h", added declaration of setParseWithComma()
	* src/SDCCglue.c: removed variable VersionString, inroduced spacesToUnderscores()
	* support/Util/MySystem.c, support/Util/MySystem.h: rewrite, char *ExePathList[]
	  replaced with set *binPathSet
	* shash_add() deallocates the item, if allready exsists, before adding the new one
	* src/SDCCmacro.c: handling macros with empty or NULL values in _evalMacros()

2003-03-30  Scott Dattalo  <scott@dattalo.com>

	* src/pic/gen.c: Commit patch from Steve Tell <tell@telltronics.org> that fixes
	  a nested for loop bug in the PIC port
	* src/regression/nestfor.c: new regression test file Steve wrote to test nested
	  for loops

2003-03-29  Bernhard Held <bernhard@bernhardheld.de>

	* support/Util/dbuf.h: remove C++ stuff to make it portable

2003-03-28  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex: Fix for bug #711240: dynamic buffer handling of C
          literal strings in stringLiteral()
	* support/Util/dbuf.c, support/Util/dbuf.h: added: dynamic buffer handling
	* src/Makefile.bcc, src/Makefile.in, src\src.dsp: added support/Util/dbuf.c
          to the project

2003-03-27  Paul Stoffregen <paul@pjrc.com>

	* src/SDCCpeeph.c (pcDistance): accurate byte distance for mcs51

2003-03-26    <johan@balder>

	* src/mcs51/gen.c (saveRegisters): catched symbol abuse
	* src/ds390/gen.c (saveRegisters): catched symbol abuse